--- a/json_api/Cargo.toml
+++ b/json_api/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 # Version 0.4.1 with "cookie" updated to 0.12
 rocket = { git = "https://github.com/voidxnull/Rocket", branch = "v0.4" }
 serde = "1.0.94"
-#serde_json = "1.0.39"
+serde_json = "1.0.39"
 structopt = "0.2.18"
 rocket_contrib = "0.4.1"
 serde_derive = "1.0.94"
