--- a/json_api/Cargo.toml
+++ b/json_api/Cargo.toml
@@ -18,8 +18,11 @@ bincode = "1.1.4"
 chrono = "0.4.7"
 tokio = "0.1.21"
 hyper = "0.12.31"
+protobuf = "2.6"
+futures = "0.1.28"
+itertools = "0.8.0"
+grpcio = "0.4.4"
 
-client = { path = "../client" }
 libra_wallet = { path = "../client/libra_wallet" }
 config = { path = "../config" }
 failure_ext = { path = "../common/failure_ext" }
@@ -29,3 +32,4 @@ types = { path = "../types" }
 crypto = { path = "../crypto/legacy_crypto" }
 vm_genesis = { path = "../language/vm/vm_genesis" }
 admission_control_proto = { path = "../admission_control/admission_control_proto" }
+proto_conv = { path = "../common/proto_conv", features = ["derive"] }
