Implement all API methods
POST /create_wallet
POST /create_wallet_account
GET /get_latest_account_state
POST /mint_coins
POST /transfer_coins
GET /get_committed_txn_by_acc_seq
GET /get_committed_txn_by_range
GET /get_events_by_account_and_type

--- a/json_api/Cargo.toml
+++ b/json_api/Cargo.toml
@@ -22,6 +22,7 @@ protobuf = "2.6"
 futures = "0.1.28"
 itertools = "0.8.0"
 grpcio = "0.4.4"
+hex = "0.3.2"
 
 libra_wallet = { path = "../client/libra_wallet" }
 config = { path = "../config" }
